--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -23,16 +23,18 @@
   </head>
   <body>
     <header>
-      <img
-        src="../src/img/Group 13.png"
-        alt="Logo Designo"
-        class="header__nav__img"
-      />
+      <a href="../index.html">
+        <img
+          src="../src/img/Group 13.png"
+          alt="Logo Designo"
+          class="header__nav__img"
+        />
+        </a>
       <nav>
         <ul class="header__nav__order">
-          <li><a href="">OUR COMPANY</a></li>
-          <li><a href="./mariya/locations.html">LOCATIONS</a></li>
-          <li><a href="./mariya/contact.html">CONTACT</a></li>
+          <li><a href="../about.html">OUR COMPANY</a></li>
+          <li><a href="../mariya/locations.html">LOCATIONS</a></li>
+          <li><a href="../mariya/contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -130,21 +132,23 @@
             how our expertise can help your business grow.
           </p>
         </div>
-        <a href="">GET IN TOUCH</a>
+        <a href="../mariya/contact.html">GET IN TOUCH</a>
       </section>
       <div class="lower__container">
         <section class="footer__nav">
           <div>
-            <img
-              src="../src/img/Group 13-1.png"
-              alt="Logo Designo"
-              class="footer__nav__img"
-            />
+            <a href="../index.html">
+              <img
+                src="../src/img/Group 13-1.png"
+                alt="Logo Designo"
+                class="footer__nav__img"
+              />
+            </a>
             <nav>
               <ul class="footer__nav__order">
-                <li><a href="">Our company</a></li>
-                <li><a href="./mariya/locations.html">Locations</a></li>
-                <li><a href="./mariya/contact.html">Contact</a></li>
+                <li><a href="../about.html">Our company</a></li>
+                <li><a href="../mariya/locations.html">Locations</a></li>
+                <li><a href="../mariya/contact.html">Contact</a></li>
               </ul>
             </nav>
           </div>
