--- a/index.html
+++ b/index.html
@@ -23,14 +23,16 @@
   </head>
   <body>
     <header>
+      <a href="index.html">
       <img
         src="./src/img/Group 13.png"
         alt="Logo Designo"
         class="header__nav__img"
       />
+      </a>
       <nav>
         <ul class="header__nav__order">
-          <li><a href="">OUR COMPANY</a></li>
+          <li><a href="about.html">OUR COMPANY</a></li>
           <li><a href="./mariya/locations.html">LOCATIONS</a></li>
           <li><a href="./mariya/contact.html">CONTACT</a></li>
         </ul>
@@ -46,7 +48,7 @@
               fully responsive websites, app design, and engaging brand
               experiences. Find out more about our services.
             </p>
-            <a href="">Learn More</a>
+            <a href="about.html">Learn More</a>
           </div>
           <div>
             <img
@@ -136,19 +138,21 @@
             how our expertise can help your business grow.
           </p>
         </div>
-        <a href="">GET IN TOUCH</a>
+        <a href="./mariya/contact.html">GET IN TOUCH</a>
       </section>
       <div class="lower__container">
         <section class="footer__nav">
           <div>
+            <a href="index.html">
             <img
               src="./src/img/Group 13-1.png"
               alt="Logo Designo"
               class="footer__nav__img"
             />
+            </a>
             <nav>
               <ul class="footer__nav__order">
-                <li><a href="">Our company</a></li>
+                <li><a href="about.html">Our company</a></li>
                 <li><a href="./mariya/locations.html">Locations</a></li>
                 <li><a href="./mariya/contact.html">Contact</a></li>
               </ul>
