--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -13,20 +13,28 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="../src/css/style.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
     <title>Contact</title>
   </head>
   <body>
     <header>
-      <img
-        src="../src/img/Group 13.png"
-        alt="Logo Designo"
-        class="header__nav__img"
-      />
+      <a href="../index.html">
+        <img
+          src="../src/img/Group 13.png"
+          alt="Logo Designo"
+          class="header__nav__img"
+        />
+        </a>
       <nav>
         <ul class="header__nav__order">
-          <li><a href="">Our company</a></li>
-          <li><a href="./mariya/locations.html">Locations</a></li>
-          <li><a href="./mariya/contact.html">Contact</a></li>
+          <li><a href="../about.html">OUR COMPANY</a></li>
+          <li><a href="../mariya/locations.html">LOCATIONS</a></li>
+          <li><a href="../mariya/contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -70,7 +78,7 @@
             class="belgium__img"
           />
           <h2>Belgium</h2>
-          <a href="">SEE LOCATION</a>
+          <a href="../mariya/locations.html">SEE LOCATION</a>
         </article>
         <article class="location__article__australia">
           <img
@@ -79,7 +87,7 @@
             class="australia__img"
           />
           <h2>AUSTRALIA</h2>
-          <a href="">SEE LOCATION</a>
+          <a href="../mariya/locations.html">SEE LOCATION</a>
         </article>
         <article class="location__article__uk">
           <img
@@ -88,7 +96,7 @@
             class="uk__img"
           />
           <h2>UNITED KINGDOM</h2>
-          <a href="">SEE LOCATION</a>
+          <a href="../mariya/locations.html">SEE LOCATION</a>
         </article>
       </section>
     </main>
@@ -97,16 +105,18 @@
       <div class="lower__container">
         <section class="footer__nav">
           <div>
-            <img
-              src="../src/img/Group 13-1.png"
-              alt="Logo Designo"
-              class="footer__nav__img"
-            />
+            <a href="../index.html">
+              <img
+                src="../src/img/Group 13-1.png"
+                alt="Logo Designo"
+                class="footer__nav__img"
+              />
+            </a>
             <nav>
               <ul class="footer__nav__order">
-                <li><a href="">Our company</a></li>
-                <li><a href="./mariya/locations.html">Locations</a></li>
-                <li><a href="./mariya/contact.html">Contact</a></li>
+                <li><a href="../about.html">Our company</a></li>
+                <li><a href="../mariya/locations.html">Locations</a></li>
+                <li><a href="../mariya/contact.html">Contact</a></li>
               </ul>
             </nav>
           </div>
