--- a/mariya/locations.html
+++ b/mariya/locations.html
@@ -10,17 +10,29 @@
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="../src/css/style.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   <title>Locations</title>
 </head>
 
 <body>
   <header>
-    <img src="../src/img/Group 13.png" alt="logo designo" class="header__nav__img" />
+    <a href="../index.html">
+      <img
+        src="../src/img/Group 13.png"
+        alt="Logo Designo"
+        class="header__nav__img"
+      />
+      </a>
     <nav>
       <ul class="header__nav__order">
-        <li><a href=""></a>our company</li>
-        <li><a href="../mariya/locations.html"></a>locations</li>
-        <li><a href="../mariya/contact.html"></a>contact</li>
+        <li><a href="../about.html">OUR COMPANY</a></li>
+          <li><a href="../mariya/locations.html">LOCATIONS</a></li>
+          <li><a href="../mariya/contact.html">CONTACT</a></li>
       </ul>
     </nav>
   </header>
@@ -84,17 +96,23 @@
           how our expertise can help your business grow.
         </p>
       </div>
-      <a href="">GET IN TOUCH</a>
+      <a href="../mariya/contact.html">GET IN TOUCH</a>
     </section>
     <div class="lower__container">
       <section class="footer__nav">
         <div>
-          <img src="../src/img/Group 13-1.png" alt="Logo Designo" class="footer__nav__img" />
+          <a href="../index.html">
+            <img
+              src="../src/img/Group 13-1.png"
+              alt="Logo Designo"
+              class="footer__nav__img"
+            />
+          </a>
           <nav>
             <ul class="footer__nav__order">
-              <li><a href="">Our company</a></li>
-              <li><a href="./mariya/locations.html">Locations</a></li>
-              <li><a href="./mariya/contact.html">Contact</a></li>
+              <li><a href="../about.html">Our company</a></li>
+                <li><a href="../mariya/locations.html">Locations</a></li>
+                <li><a href="../mariya/contact.html">Contact</a></li>
             </ul>
           </nav>
         </div>
