--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -97,29 +97,31 @@
 
       <section class="section__projects">
         <article class="projects__web__design">
+          <a href="webdesign.html" target="_blank">
           <div class="projects__web__design__img">
             <img src="../src/img/web-design.png" alt="laptop" class="web" />
             <div class="projects__web__design__text">
               <h1>Web Design</h1>
-              <a href="webdesign.html" target="_blank"
-                >View projects
-                <img src="../src/img/Path 5.png" alt="arrow" />
-              </a>
+                <p>View projects
+                  <img src="../src/img/Path 5.png" alt="arrow" />
+                </p>
+              </div>
             </div>
-          </div>
+          </a>
         </article>
 
         <article class="projects__graphic__design">
+          <a href="">
           <div class="projects__graphic__design__img">
             <img src="../src/img/Bitmap.jpg" alt="graphic" />
             <div class="projects__graphic__design__text">
               <h1>Graphic Design</h1>
-              <a href=""
-                >View projects
-                <img src="../src/img/Path 5.png" alt="arrow" />
-              </a>
+                <p>View projects
+                  <img src="../src/img/Path 5.png" alt="arrow" />
+                </p>
+              </div>
             </div>
-          </div>
+          </a>
         </article>
       </section>
     </main>
