--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -96,29 +96,31 @@
 
       <section class="section__projects">
         <article class="projects__app__design">
+          <a href="appdesign.html" target="_blank">
           <div class="projects__app__design__img">
             <img src="../src/img/Bitmap-1.jpg" alt="smartphone" />
             <div class="projects__app__design__text">
               <h1>App Design</h1>
-              <a href="appdesign.html" target="_blank"
-                >View projects
-                <img src="../src/img/Path 5.png" alt="arrow" />
-              </a>
+              <p>View projects
+              <img src="../src/img/Path 5.png" alt="arrow" />
+            </p>
             </div>
-          </div>
+            </div>
+          </a>
         </article>
 
         <article class="projects__graphic__design">
+          <a href="">
           <div class="projects__graphic__design__img">
             <img src="../src/img/Bitmap.jpg" alt="graphic" class="graphic" />
             <div class="projects__graphic__design__text">
               <h1>Graphic Design</h1>
-              <a href=""
-                >View projects
-                <img src="../src/img/Path 5.png" alt="arrow" />
-              </a>
+                <p>View projects
+                  <img src="../src/img/Path 5.png" alt="arrow" />
+                </p>
+              </div>
             </div>
-          </div>
+          </a>
         </article>
       </section>
     </main>
