--- a/mariya/contact.html
+++ b/mariya/contact.html
@@ -57,7 +57,7 @@
                 name="name"
                 type="text"
                 required
-                oninvalid="this.setCustomValidity('Cant be empty')"
+                oninvalid="this.setCustomValidity('Cannot be empty')"
                 oninput="this.setCustomValidity('')"
               />
               <br />
@@ -66,7 +66,7 @@
                 name="email address"
                 type="email"
                 required
-                oninvalid="this.setCustomValidity('Cant be empty')"
+                oninvalid="this.setCustomValidity('Cannot be empty')"
                 oninput="this.setCustomValidity('')"
               />
               <br />
@@ -75,7 +75,7 @@
                 name="phone"
                 type="tel"
                 required
-                oninvalid="this.setCustomValidity('Cant be empty')"
+                oninvalid="this.setCustomValidity('Cannot be empty')"
                 oninput="this.setCustomValidity('')"
               />
               <br />
