--- a/index.html
+++ b/index.html
@@ -1,184 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Home page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./src/css/style.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Designo</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="Home page" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./src/css/style.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
-  <title>Designo</title>
-</head>
-
-<body>
-  <header>
-    <a href="index.html">
-      <img src="./src/img/Group 13.png" alt="Logo Designo" class="header__nav__img" />
-    </a>
-    <nav>
-      <ul class="header__nav__order">
-        <li><a href="about.html">OUR COMPANY</a></li>
-        <li><a href="./mariya/locations.html">LOCATIONS</a></li>
-        <li><a href="./mariya/contact.html">CONTACT</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="section__services">
-      <article>
-        <div>
-          <h1>Award-winning custom designs and digital branding solutions</h1>
-          <p>
-            With over 10 years in the industry, we are experienced in creating
-            fully responsive websites, app design, and engaging brand
-            experiences. Find out more about our services.
-          </p>
-          <a href="about.html">Learn More</a>
-        </div>
-        <div>
-          <img src="./src/img/black_front copy 4-1.png" alt="phone" class="services__img" />
-        </div>
-      </article>
-    </section>
-    <section class="section__projects">
-      <article class="projects__web">
-        <a href="Tanguy/webdesign.html" target="_blank">
-          <div class="projects__web__img">
-            <img src="./src/img/web-design.png" alt="laptop" />
-            <div class="projects__web__text">
-              <h1>Web Design</h1>
-              <p>View projects
-                <img src="./src/img/Path 5.png" alt="arrow" />
-              </p>
-            </div>
+  <body>
+    <header>
+      <a href="index.html">
+        <img
+          src="./src/img/Group 13.png"
+          alt="Logo Designo"
+          class="header__nav__img"
+        />
+      </a>
+      <nav>
+        <ul class="header__nav__order">
+          <li><a href="about.html">OUR COMPANY</a></li>
+          <li><a href="./mariya/locations.html">LOCATIONS</a></li>
+          <li><a href="./mariya/contact.html">CONTACT</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <section class="section__services">
+        <article>
+          <div>
+            <h1>Award-winning custom designs and digital branding solutions</h1>
+            <p>
+              With over 10 years in the industry, we are experienced in creating
+              fully responsive websites, app design, and engaging brand
+              experiences. Find out more about our services.
+            </p>
+            <a href="about.html">Learn More</a>
           </div>
-        </a>
-      </article>
-
-      <article class="projects__app">
-
-        <a href="Tanguy/appdesign.html" target="_blank">
-          <div class="projects__app__img">
-            <img src="./src/img/Bitmap-1.jpg" alt="smartphone" />
-            <div class="projects__app__text">
-              <h1>App Design</h1>
-              <p>View projects
-                <img src="./src/img/Path 5.png" alt="arrow" />
-              </p>
-            </div>
+          <div>
+            <img
+              src="./src/img/black_front copy 4-1.png"
+              alt="phone"
+              class="services__img"
+            />
           </div>
-        </a>
-
-      </article>
-
-      <article class="projects__graphic">
-          <a href="">
-            <div class="projects__graphic__img">
-                <img src="./src/img/Bitmap.jpg" alt="graphic" />
-              <div class="projects__graphic__text">
-                <h1>Graphic Design</h1>
-                <p>View projects
+        </article>
+      </section>
+      <section class="section__projects">
+        <article class="projects__web">
+          <a href="Tanguy/webdesign.html" target="_blank">
+            <div class="projects__web__img">
+              <img src="./src/img/web-design.png" alt="laptop" />
+              <div class="projects__web__text">
+                <h1>Web Design</h1>
+                <p>
+                  View projects
                   <img src="./src/img/Path 5.png" alt="arrow" />
                 </p>
               </div>
             </div>
           </a>
-      </article>
-    </section>
-    <section class="section__values">
-      <div class="values__passion">
-        <img src="./src/img/Group 23.svg" alt="working on tablet" />
-        <h2>PASSIONATE</h2>
-        <p>
-          Each project starts with an in-depth brand research to ensure we
-          only create products that serve a purpose. We merge art, design, and
-          technology into exciting new solutions.
-        </p>
-      </div>
-      <div class="values__resourceful">
-        <img src="./src/img/Group 22.svg" alt="working on her desk" />
-        <h2>RESOURCEFUL</h2>
-        <p>
-          Everything that we do has a strategic purpose. We use an agile
-          approach in all of our projects and value customer collaboration. It
-          guarantees superior results that fulfill our clients' needs.
-        </p>
-      </div>
-      <div class="values__friendly">
-        <img src="./src/img/Group 21.svg" alt="share file" />
-        <h2>FRIENDLY</h2>
-        <p>
-          We are a group of enthusiastic folks who know how to put people
-          first. Our success depends on our customers, and we strive to give
-          them the best experience a company can provide.
-        </p>
-      </div>
-    </section>
-  </main>
-  <footer>
-    <section class="section__contact">
-      <div>
-        <h1>Let's talk about your project</h1>
-        <p>
-          Ready to take it to the next level? Contact us today and find out
-          how our expertise can help your business grow.
-        </p>
-      </div>
-      <a href="./mariya/contact.html">GET IN TOUCH</a>
-    </section>
-    <div class="lower__container">
-      <section class="footer__nav">
-        <div>
-          <a href="index.html">
-            <img src="./src/img/Group 13-1.png" alt="Logo Designo" class="footer__nav__img" />
+        </article>
+
+        <article class="projects__app">
+          <a href="Tanguy/appdesign.html" target="_blank">
+            <div class="projects__app__img">
+              <img src="./src/img/Bitmap-1.jpg" alt="smartphone" />
+              <div class="projects__app__text">
+                <h1>App Design</h1>
+                <p>
+                  View projects
+                  <img src="./src/img/Path 5.png" alt="arrow" />
+                </p>
+              </div>
+            </div>
           </a>
-          <nav>
-            <ul class="footer__nav__order">
-              <li><a href="about.html">Our company</a></li>
-              <li><a href="./mariya/locations.html">Locations</a></li>
-              <li><a href="./mariya/contact.html">Contact</a></li>
-            </ul>
-          </nav>
+        </article>
+
+        <article class="projects__graphic">
+          <a href="">
+            <div class="projects__graphic__img">
+              <img src="./src/img/Bitmap.jpg" alt="graphic" />
+              <div class="projects__graphic__text">
+                <h1>Graphic Design</h1>
+                <p>
+                  View projects
+                  <img src="./src/img/Path 5.png" alt="arrow" />
+                </p>
+              </div>
+            </div>
+          </a>
+        </article>
+      </section>
+      <section class="section__values">
+        <div class="values__passion">
+          <img src="./src/img/Group 23.svg" alt="working on tablet" />
+          <h2>PASSIONATE</h2>
+          <p>
+            Each project starts with an in-depth brand research to ensure we
+            only create products that serve a purpose. We merge art, design, and
+            technology into exciting new solutions.
+          </p>
+        </div>
+        <div class="values__resourceful">
+          <img src="./src/img/Group 22.svg" alt="working on her desk" />
+          <h2>RESOURCEFUL</h2>
+          <p>
+            Everything that we do has a strategic purpose. We use an agile
+            approach in all of our projects and value customer collaboration. It
+            guarantees superior results that fulfill our clients' needs.
+          </p>
+        </div>
+        <div class="values__friendly">
+          <img src="./src/img/Group 21.svg" alt="share file" />
+          <h2>FRIENDLY</h2>
+          <p>
+            We are a group of enthusiastic folks who know how to put people
+            first. Our success depends on our customers, and we strive to give
+            them the best experience a company can provide.
+          </p>
         </div>
       </section>
-      <hr />
-      <div class="inline__lower__container">
-        <section class="section__info">
-          <div class="info__address">
-            <h3>Designo Central Office</h3>
-            <p>
-              386 Wellington Street <br />
-              1000 Brussels - Belgium
-            </p>
-          </div>
-          <div class="info__contact">
-            <h3>Contact Us (Central Office)</h3>
-            <p>
-              P : +1 253-863-8967 <br />
-              M : contact@designo.co
-            </p>
+    </main>
+    <footer>
+      <section class="section__contact">
+        <div>
+          <h1>Let's talk about your project</h1>
+          <p>
+            Ready to take it to the next level? Contact us today and find out
+            how our expertise can help your business grow.
+          </p>
+        </div>
+        <a href="./mariya/contact.html">GET IN TOUCH</a>
+      </section>
+      <div class="lower__container">
+        <section class="footer__nav">
+          <div>
+            <a href="index.html">
+              <img
+                src="./src/img/Group 13-1.png"
+                alt="Logo Designo"
+                class="footer__nav__img"
+              />
+            </a>
+            <nav>
+              <ul class="footer__nav__order">
+                <li><a href="about.html">Our company</a></li>
+                <li><a href="./mariya/locations.html">Locations</a></li>
+                <li><a href="./mariya/contact.html">Contact</a></li>
+              </ul>
+            </nav>
           </div>
         </section>
-        <section class="section__media">
-          <ul class="media__order">
-            <li><i class="fa-brands fa-facebook-square"></i></li>
-            <li><i class="fa-brands fa-youtube-square"></i></li>
-            <li><i class="fa-brands fa-twitter"></i></li>
-            <li><i class="fa-brands fa-pinterest"></i></li>
-            <li><i class="fa-brands fa-instagram"></i></li>
-          </ul>
-        </section>
+        <hr />
+        <div class="inline__lower__container">
+          <section class="section__info">
+            <div class="info__address">
+              <h3>Designo Central Office</h3>
+              <p>
+                386 Wellington Street <br />
+                1000 Brussels - Belgium
+              </p>
+            </div>
+            <div class="info__contact">
+              <h3>Contact Us (Central Office)</h3>
+              <p>
+                P : +1 253-863-8967 <br />
+                M : contact@designo.co
+              </p>
+            </div>
+          </section>
+          <section class="section__media">
+            <ul class="media__order">
+              <li><i class="fa-brands fa-facebook-square"></i></li>
+              <li><i class="fa-brands fa-youtube-square"></i></li>
+              <li><i class="fa-brands fa-twitter"></i></li>
+              <li><i class="fa-brands fa-pinterest"></i></li>
+              <li><i class="fa-brands fa-instagram"></i></li>
+            </ul>
+          </section>
+        </div>
       </div>
-    </div>
-  </footer>
-</body>
-
+    </footer>
+  </body>
 </html>
