add rectangle index

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       </nav>
     </header>
     <main>
+      <div class="section__rectangle">
+        <img src="./src/img/Rectangle.svg" alt="rectangle" />
+      </div>
+      <div class="section__rectangle__upsidedown">
+        <img src="./src/img/Rectangle Copy 4.png" alt="rectangle" />
+      </div>
       <section class="section__services">
         <article>
           <div>
@@ -60,6 +66,7 @@
           </div>
         </article>
       </section>
+
       <section class="section__projects">
         <article class="projects__web">
           <a href="Tanguy/webdesign.html" target="_blank">
@@ -106,6 +113,7 @@
           </a>
         </article>
       </section>
+
       <section class="section__values">
         <div class="values__passion">
           <img src="./src/img/Group 23.svg" alt="working on tablet" />
