--- a/Tanguy/webdesign.html
+++ b/Tanguy/webdesign.html
@@ -98,7 +98,11 @@
         <article class="projects__app__design">
           <a href="appdesign.html" target="_blank">
             <div class="projects__app__design__img">
-              <img src="../src/img/Bitmap-1.jpg" alt="smartphone" />
+              <img
+                src="../src/img/Bitmap-1.jpg"
+                class="app-design-img"
+                alt="smartphone"
+              />
               <div class="projects__app__design__text">
                 <h1>App Design</h1>
                 <p>
