--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="Home page" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link rel="stylesheet" href="../src/css/style.min.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet"
-  />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Home page" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="../src/css/style.min.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>App Design</title>
   </head>
@@ -30,7 +30,7 @@
           alt="Logo Designo"
           class="header__nav__img"
         />
-        </a>
+      </a>
       <nav>
         <ul class="header__nav__order">
           <li><a href="../about.html">OUR COMPANY</a></li>
@@ -42,12 +42,12 @@
     <main>
       <section class="section__solutions__design">
         <div>
-        <h2>App Design</h2>
-        <p>
-          Our mobile designs bring intuitive digital solutions <br/> to your customers
-          right at their fingertips.
-        </p>
-      </div>
+          <h2>App Design</h2>
+          <p>
+            Our mobile designs bring intuitive digital solutions <br />
+            to your customers right at their fingertips.
+          </p>
+        </div>
       </section>
 
       <section class="section__tech">
@@ -98,11 +98,12 @@
       <section class="section__projects">
         <article class="projects__web__design">
           <a href="webdesign.html" target="_blank">
-          <div class="projects__web__design__img">
-            <img src="../src/img/web-design.png" alt="laptop" class="web" />
-            <div class="projects__web__design__text">
-              <h1>Web Design</h1>
-                <p>View projects
+            <div class="projects__web__design__img">
+              <img src="../src/img/web-design.png" alt="laptop" class="web" />
+              <div class="projects__web__design__text">
+                <h1>Web Design</h1>
+                <p>
+                  View projects
                   <img src="../src/img/Path 5.png" alt="arrow" />
                 </p>
               </div>
@@ -112,11 +113,12 @@
 
         <article class="projects__graphic__design">
           <a href="">
-          <div class="projects__graphic__design__img">
-            <img src="../src/img/Bitmap.jpg" alt="graphic" />
-            <div class="projects__graphic__design__text">
-              <h1>Graphic Design</h1>
-                <p>View projects
+            <div class="projects__graphic__design__img">
+              <img src="../src/img/Bitmap.jpg" alt="graphic" class="graphic" />
+              <div class="projects__graphic__design__text">
+                <h1>Graphic Design</h1>
+                <p>
+                  View projects
                   <img src="../src/img/Path 5.png" alt="arrow" />
                 </p>
               </div>
