--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 class="footer__nav__img"
               />
             </a>
+            <div class="ligne"></div>
             <nav>
               <ul class="footer__nav__order">
                 <li><a href="about.html">Our company</a></li>
