--- a/about.html
+++ b/about.html
@@ -73,8 +73,13 @@
             Every design is thoughtfully crafted from concept to launch,
             ensuring success in its given market. We are constantly updating our
             skills in a myriad of platforms.
+            Our team is multi-disciplinary and we are not merely interested in
+            form — content and meaning are just as important. We give great
+            importance to craftsmanship, service, and prompt delivery. Clients
+            have always been impressed with our high-quality outcomes that
+            encapsulates their brand's story and mission.
           </p>
-          <br />
+          <br/>
           <p>
             Our team is multi-disciplinary and we are not merely interested in
             form — content and meaning are just as important. We give great
