--- a/Tanguy/appdesign.html
+++ b/Tanguy/appdesign.html
@@ -149,6 +149,7 @@
                 class="footer__nav__img"
               />
             </a>
+            <div class="ligne"></div>
             <nav>
               <ul class="footer__nav__order">
                 <li><a href="../about.html">Our company</a></li>
